Fixed frontend, chat interface, scrollbar settings, UI enhancements (#8)
* latest version of backend and frontend

* Fixed frontend, chat interface, scrollbar settings, UI enhancements

---------

--- a/frontend/app/globals.css
+++ b/frontend/app/globals.css
@@ -1,3 +1,28 @@
 @import "tailwindcss";
 
 @import "../app/css/fonts.css";
+
+.chat-box::-webkit-scrollbar {
+  width: 15px;
+}
+
+.chat-box::-webkit-scrollbar-track {
+  background: transparent;
+}
+
+.chat-box::-webkit-scrollbar-thumb {
+  background: #464646;
+  width: 20px;
+  border-radius: 10px;
+  border: 2px solid transparent;
+  background-clip: content-box;
+  min-height: 20px; /* this just ensures it's not too small */
+}
+.chat-box::-webkit-scrollbar-thumb:hover {
+  background: #858585;
+  width: 20px;
+  border-radius: 10px;
+  border: 2px solid transparent;
+  background-clip: content-box;
+  min-height: 20px; /* this just ensures it's not too small */
+}
